--- a/assets/Pages/propos.html
+++ b/assets/Pages/propos.html
@@ -30,15 +30,15 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-sm-8 col-md-7 py-4">
-                            <h4 class="text-white">EMA</h4>
+                            <!-- <h4 class="text-white">EMA</h4> -->
                             <p class="text-muted">pour acceder aux pages spéciales</p>
                         </div>
                         <div class="col-sm-4 offset-md-1 py-4">
-                            <h4 class="text-white">CONTACT</h4>
+                            <!-- <h4 class="text-white">CONTACT</h4> -->
                             <ul class="list-unstyled">
                                 <li><a href="/index.html" class="text-white">ACCEUIL</a></li>
-                                <li><a href="/assets/Pages/eglises.html" class="text-white">NOS EGLISES</a></li>
-                                <li><a href="#" class="text-white">POUR NOUS TROUVER</a></li>
+                                <li><a href="/assets/Pages/eglises.html" class="text-white">.........</a></li>
+                                <li><a href="#" class="text-white">...........</a></li>
                             </ul>
                         </div>
                     </div>
@@ -47,13 +47,13 @@
             <div class="navbar navbar-dark bg-dark shadow-sm">
                 <div class="container">
                     <a href="#" class="navbar-brand d-flex align-items-center">
-                        <!-- <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="none" stroke="currentColor"
+                        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="none" stroke="currentColor"
                             stroke-linecap="round" stroke-linejoin="round" stroke-width="2" aria-hidden="true" class="me-2"
                             viewBox="0 0 24 24">
                             <path d="M23 19a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h4l2-3h6l2 3h4a2 2 0 0 1 2 2z" />
-                            <circle cx="12" cy="13" r="4" /> -->
+                            <circle cx="12" cy="13" r="4" /> 
                         </svg>
-                        <strong>FEDERATION CHRETIENNE DE FRANCE</strong>
+                        <strong>Espace Fraternité</strong>
                     </a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                         data-bs-target="#navbarHeader" aria-controls="navbarHeader" aria-expanded="false"
