--- a/index.html
+++ b/index.html
@@ -13,59 +13,47 @@
 
 	<!-- Bootstrap core CSS -->
 	<link href="assets/css/bootstrap.min.css" rel="stylesheet" />
-	<link rel="stylesheet" href="assets/css/styles.css" />
+	<link rel="stylesheet" href="/assets/css/styles.css" />
 
 
-	<title>Projet Ema</title>
+	<title>Espace Fraternité</title>
 </head>
 
 <body>
-	<!--+++++++1 ère section  Barre de Navigation ++++++++++++++++++-->
-	<nav class="cc-navbar navbar navbar-expand-lg navbar-dark position-fixed w-100 ">
-		<div class="container-fluid">
-			<!-- <a class="navbar-brand text-uppercase">Ema</a> -->
-			<!-- <a class="navbar-brand" href="#"> -->
-			<img src="./assets/images/logo-ema.png" alt="" srcset="">
+
+	<div class="navbar navbar-dark bg-dark shadow-sm">
+		<div class="container">
+			<a href="#" class="navbar-brand d-flex align-items-center">
+				<!-- <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="none" stroke="currentColor"
+					stroke-linecap="round" stroke-linejoin="round" stroke-width="2" aria-hidden="true" class="me-2"
+					viewBox="0 0 24 24">
+					<path d="M23 19a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h4l2-3h6l2 3h4a2 2 0 0 1 2 2z" />
+					<circle cx="12" cy="13" r="4" /> 
+				</svg> -->
+				<!-- <img src="/assets/images/Logo EF.jpg" alt="" srcset=""> -->
+				<strong>Espace Fraternité</strong>
 			</a>
 			<button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-				data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+				data-bs-target="#navbarHeader" aria-controls="navbarHeader" aria-expanded="false"
 				aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
 			</button>
-			<div class="collapse navbar-collapse" id="navbarSupportedContent">
-				<!--collapse == caché-->
-				<ul class="navbar-nav ms-auto mb-2 mb-lg-0 fs-4">
-					<!--ms-auto == margin start - pour les classes qui mettent margin à auto
-					mb-lg-0 == margin-->
-					<li class="nav-item pe-4 fs-4">
-						<!--paddin left 4px-->
-						<a class="nav-link active" aria-current="page" href="#">Accueil</a>
-					</li>
-					<li class="nav-item pe-4">
-						<a class="nav-link" href="assets/Pages/propos.html">A Propos</a>
-					</li>
-					<li class="nav-item pe-4">
-						<a class="nav-link" href="assets/Pages/temoignages.html">Témoignages</a>
-					</li>
-					<li class="nav-item pe-4">
-						<a class="btn btn-order fs-4 rounded-0" href="#">Login</a>
-					</li>
-				</ul>
-			</div>
 		</div>
-	</nav>
-
+	</div>
 	<section class="banner d-flex justify-content-center align-items-center pt-5">
 		<div class="container ">
 			<div class="row">
-				<div class="col-md-6"></div>
+				<div class="col-md-6">
+					<img src="/assets/images/Logo EF.jpg" alt="" srcset="">
+				</div>
 				<div class="col-md-6 banner-desc lh-lg">
 					<h1 class="text-capitalize py-1 Nuosu Sil">
-						Fédération des Eglises <br>Chrétiennes de France
+						Espace Fraternité
 					</h1>
+					<h2>"L'entraide est à portée de main,<br> saisissez-là.</h2>
 					<p>
-						<button class="btn btn-order btn-lg me-5 rounded-0.poppins">Nos Valeurs</button>
-						<button class="btn btn-outline-info btn-lg rounded-0poppins">S'inscrire</button>
+						<button class="btn btn-order btn-lg me-5 rounded-0.poppins">Nous contacter</button>
+						<button class="btn btn-outline-info btn-lg  rounded-0poppins ">Devenir Bénévole</button>
 					</p>
 					<div class="row">
 						<div class="col">
@@ -90,27 +78,18 @@
 				<div class="card mb-3 border-0 rounded-0">
 					<div class="row">
 						<div class="col-md-6 shadow p-3 mb-5 bg-body rounded">
-							<img src="assets/images/pino.jpg" class="img-fluid" alt="..." />
+							<img src="//fakeimg.pl/650x450/33cccc/" class="img-fluid" alt="..." /> <!--/fakeimg.pl/250x100/ff0000/-->
 						</div>
 						<div class="col-md-6">
 							<div class="card-body ms-5 px-0">
 								<h3 class="card-title ">A propos de nous</h3>
 								<p class="card-text " class="content" id="paragPropos">
-									Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea rerum fugiat sed
-									deleniti consectetur at ut explicabo eligendi? Quibusdam rem doloremque quo sed est
-									consequuntur. Qui illum nihil cumque animi in, similique eaque sequi officia
-									molestias atque non assumenda ipsam! Modi aliquid facilis mollitia! Corporis
-									accusamus dicta inventore. Excepturi, molestiae aspernatur. Rerum vel doloremque,
-									eligendi placeat sit porro explicabo quaerat perferendis, molestias harum, totam
-									nesciunt? Nostrum cum voluptatum cupiditate id excepturi consequuntur, vero ea
-									aspernatur dignissimos temporibus, numquam natus esse placeat! At fuga nulla, itaque
-									tempora dolores aut voluptatem neque minima necessitatibus explicabo, saepe
-									nesciunt, temporibus doloremque ratione dolor et rem beatae illo tempore repellat
-									repudiandae deleniti corporis deserunt ullam. Enim dolorum facilis amet neque porro
+									Notre Histoire
+Il y a plus de 35 ans, en 1985, constatant que l’éducation était primordiale dans le développement de l’individu, 3 soeurs dominicaines ont commencé à apprendre à compter, à lire et à écrire aux enfants de leur quartier. Elles prirent conscience que certains enfants venaient s’instruire sans manger ...
+
 
 								</p>
-								<p class="card-text"><a href="/assets/Pages/propos.html" class="btn text-muted">En
-										Savoir voir Plus...</a></p>
+								<p class="card-text"><a href="/assets/Pages/propos.html" class="btn text-muted">Lire la suite...</a></p>
 							</div>
 						</div>
 					</div>
@@ -133,21 +112,22 @@
 									velit, modi ut consectetur, placeat accusamus, aperiam fuga dolor quia repellat
 									asperiores molestiae nobis.
 								</p>
-								<p class="card-text"><a href="#" class="btn text-muted">En savoir plus...</a></p>
+								<p class="card-text"><a href="#" class="btn text-muted">Lire la suite...</a></p>
 							</div>
 						</div>
+						<!--!++++++++++++ Fin 3 ème section-->
 						<!--!++++++++++++4 ème  section-->
 						<div class="col-md-6">
 							<div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
 								<div class="carousel-inner">
 									<div class="carousel-item active">
-										<img src="assets/images/barbecue.jpg" class="d-block w-100" alt="..." />
+										<img src="//fakeimg.pl/300x200/ff0000/" class="d-block w-100" alt="..." />
 									</div>
 									<div class="carousel-item">
-										<img src="assets/images/jeune1.jpg" class="d-block w-100" alt="..." />
+										<img src="//fakeimg.pl/300x200/33cccc/" class="d-block w-100" alt="..." />
 									</div>
 									<div class="carousel-item">
-										<img src="assets/images/mariage2.jpg" class="d-block w-100" alt="..." />
+										<img src="//fakeimg.pl/300x200/ff0000/" class="d-block w-100" alt="..." />
 									</div>
 								</div>
 								<button class="carousel-control-prev" type="button"
@@ -165,15 +145,14 @@
 					</div>
 				</div>
 			</div>
-			<!--!++++++++++++ Fin 3 ème section-->
 
-			<!--!++++++++++++ 4 ème section-->
+
 
 			<div class="row">
 				<div class="card mb-3 border-0 rounded-0">
 					<div class="row">
 						<div class="col-md-6">
-							<img src="assets/images/travaux1.jpg" class="img-fluid" alt="..." />
+							<img src="//fakeimg.pl/300x200/ff0000/ " class="img-fluid" alt="..." />
 						</div>
 						<div class="col-md-6">
 							<div class="card-body px-0">
@@ -205,26 +184,29 @@
 					<div class="card-header Nuosu Sil fs-4">
 						<ul class="nav nav-tabs justify-content-center card-header-tabs">
 							<li class="nav-item">
-								<a class="nav-link active" href="#">Groupe Parent</a>
+								<a class="nav-link active" href="#">Aide Alimentaire</a>
 							</li>
 							<li class="nav-item">
-								<a class="nav-link text-light" href="#">Groupe Jeunes</a>
+								<a class="nav-link text-light" href="#">Aide à la Personne</a>
 							</li>
 							<li class="nav-item">
-								<a class="nav-link text-light" href="#">Etudes Bibliques</a>
+								<a class="nav-link text-light" href="#">Accompagnement et Formation Numérique</a>
 							</li>
 							<li class="nav-item">
-								<a class="nav-link text-light" href="#">Espace Prière</a>
+								<a class="nav-link text-light" href="#">Actualites</a>
+							</li>
+							<li class="nav-item">
+								<a class="nav-link text-light" href="#">Dons</a>
 							</li>
 						</ul>
 					</div>
-					<div class="card-body text-light">
+					<!-- <div class="card-body text-light">
 						<h5 class="card-title">Titre spécial opoortun</h5>
 						<p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Exercitationem
 							nihil adipisci molestias. Nostrum saepe, assumenda iusto eos cumque in temporibus cupiditate
 							laborum dolores corrupti dolor.
 						</p>
-					</div>
+					</div> -->
 				</div>
 			</div>
 			<div class="row row-cols-1 row-cols-md-2 g-4">
@@ -301,31 +283,31 @@
 			<div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
 				<div class="carousel-inner">
 					<div class="carousel-item active">
-						<img src="assets/images/form1.jpg" class="d-block w-100" alt="..." />
+						<img src="https://fakeimg.pl/250x100/ff0000/" class="d-block w-25 h-50" alt="..." />
 						<div class="carousel-caption d-none d-md-block">
-							<h5>Le gout d'apprendre</h5>
-							<p> dans la bonne humeur et dans la joie</p>
+							<h5>----------</h5>
+							<p> -----------------</p>
 						</div>
 					</div>
 					<div class="carousel-item">
-						<img src="assets/images/form2.jpg" class="d-block w-100" alt="..." />
+						<img src="https://fakeimg.pl/250x100/ff0000/" class="d-block w-25 h-50" alt="..." />
 						<div class="carousel-caption d-none d-md-block">
-							<h5>Le Pasteur à l'oeuvre</h5>
-							<p>Dieu... origine de tout...</p>
+							<h5>-----------------</h5>
+							<p>-------------------</p>
 						</div>
 					</div>
 					<div class="carousel-item">
-						<img src="assets/images/form3.jpg" class="d-block w-100" alt="..." />
+						<img src="https://fakeimg.pl/250x100/ff0000/" class="d-block w-25 h-50" alt="..." />
 						<div class="carousel-caption d-none d-md-block">
-							<h5>Un environnement sutdieux et joyeux</h5>
-							<p>Comprendre la parole</p>
+							<h5>---------------------</h5>
+							<p>---------------------</p>
 						</div>
 					</div>
 					<div class="carousel-item">
-						<img src="assets/images/form4.jpg" class="d-block w-100" alt="..." />
+						<img src="https://fakeimg.pl/250x100/ff0000/" class="d-block w-25 h-50" alt="..." />
 						<div class="carousel-caption d-none d-md-block">
-							<h5>Accéder à la connaissancez de Dieu</h5>
-							<p>§§§§§§§§§§§§§§§§§§§§§§§§§§§§§§§§§§§§§§§§</p>
+							<h5>----------------------</h5>
+							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo, explicabo molestiae! Illum nesciunt explicabo dignissimos, eius necessitatibus dolorum </p>
 						</div>
 					</div>
 				</div>
@@ -347,7 +329,7 @@
 	<!--!++++++++++++5 ème section-->
 	<section class="order-form py-5">
 		<div class="container">
-			<h2 class="poppins text-center text-light mb-4">Prendre part à l'activité</h2>
+			<h2 class="poppins text-center text-light mb-4">Devenir  Bénévole</h2>
 			<form>
 				<div class="row">
 					<div class="col-md-6 col-sm">
@@ -360,12 +342,12 @@
 									class="fas fa-utensils"></i></label>
 							<select class="form-select" id="inputGroupSelect01">
 								<option class="text-muted">Choisir une activité</option>
-								<option value="1">Activité 1</option>
-								<option value="2">Activité 2</option>
-								<option value="3">Activité 3</option>
+								<option value="1">Louange</option>
+								<option value="2">Enseignement</option>
+								<option value="3">Prière</option>
 							</select>
 						</div>
-						<div class="input-group mb-3">
+						<!-- <div class="input-group mb-3">
 							<label class="input-group-text" for="inputGroupSelect01"><i
 									class="fas fa-sort-numeric-up-alt"></i></label>
 							<select class="form-select" id="inputGroupSelect01">
@@ -375,7 +357,7 @@
 								<option value="3">Entre 8 et 12</option>
 								<option value="3">Plus de 12</option>
 							</select>
-						</div>
+						</div> -->
 					</div>
 					<div class="col-md-6 col-sm">
 						<div class="input-group mb-3">
@@ -393,15 +375,19 @@
 					</div>
 				</div>
 				<div class="row">
-					<div class="input-group mb-3">
+					<!-- <div class="input-group mb-3">
 						<span class="input-group-text">Précisez le nombre</span>
 						<input type="text" class="form-control" placeholder="Ex:. 15" />
-					</div>
+					</div> -->
 					<div class="input-group">
 						<span class="input-group-text">Autres informations</span>
 						<textarea class="form-control" aria-label="With textarea"></textarea>
 					</div>
 				</div>
+				<!-- <button type="submit">Envoyer</button> -->
+				<div class="col-12">
+					<button class="btn btn-success  type="submit">Submit form</button>
+				  </div>
 			</form>
 		</div>
 	</section>
@@ -410,7 +396,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-3 col-md-6 mb-4 col-sm">
-					<h6 class="Nuosu Sil ps-3 fs-5">EMA </h6>
+					<h6 class="Nuosu Sil ps-3 fs-5">Espace Fraternité </h6>
 					<nav class="nav flex-column">
 						<a class="nav-link py-1 poppins fs-6 text-secondary active" aria-current="page"
 							href="#">Active</a>
